--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
 <head>
 	<meta charset="utf-8">
 	<link href="index.css" rel="stylesheet">
-	<title>Stream Des Films</title>
+	<title>Film et Série</title>
 </head>
 <body>
 	<header>
 		<table style="min-width: 100%;">
     			<tr>
-				<td style="width: 50%; text-align: left;">T</td>
-                    		<td style="width: 50%; text-align: right;">M</td>
+				    <td style="width: 50%; text-align: left;"></td>
+            <td style="width: 50%; text-align: right;">M</td>
     			</tr>
     		</table>
 	</header>
+	
+	
 </body>
 </html>
