--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<header>
 		<table style="min-width: 100%;">
     			<tr>
-				    <td style="width: 50%; text-align: left;"></td>
-            <td style="width: 50%; text-align: right;">M</td>
+				    <td style="width: 50%; text-align: left;"><img src="LOGO.png" alt="Logo"/></td>
+            <td style="width: 50%; text-align: right;"></td>
     			</tr>
     		</table>
 	</header>
