--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<table style="min-width: 100%;">
     			<tr>
 				    <td style="width: 50%; text-align: left;"><img src="LOGO.PNG" alt="Logo" height="20"/></td>
-            <td style="width: 50%; text-align: right;"></td>
+						<td style="width: 50%; text-align: right;"><a href="./index.html"><img src="RechercherBtn.png" alt="Rechercher" height="20"/></a></td>
     			</tr>
     		</table>
 	</header>
