--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -1,1 +1,21 @@
-1
+<!DOCTYPE html>
+
+<html>
+<head>
+	<meta charset="utf-8">
+	<link href="index.css" rel="stylesheet">
+	<title>Rechercher | Film et Série</title>
+</head>
+<body>
+	<header>
+		<table style="min-width: 100%;">
+    			<tr>
+				    <td style="width: 50%; text-align: left;"><img src="LOGO.PNG" alt="Logo" height="40"/></td>
+						<td style="width: 50%; text-align: right;"><a href="./rechercher/index.html"><img src="RechercherBtn.png" alt="Rechercher" height="40"/></a></td>
+    			</tr>
+    		</table>
+	</header>
+	
+	
+</body>
+</html>
