--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -10,7 +10,7 @@
 	<header>
 		<table style="min-width: 100%;">
     			<tr>
-				    <td style="width: 50%; text-align: left;"><img src="LOGO.PNG" alt="Logo" height="40"/></td>
+				    <td style="width: 50%; text-align: left;"><a href="./"><img src="LOGO.PNG" alt="Logo" height="40"/></a></td>
 						<td style="width: 50%; text-align: right;"><a href="./rechercher/index.html"><img src="RechercherBtn.png" alt="Rechercher" height="40"/></a></td>
     			</tr>
     		</table>
