--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link href="index.css" rel="stylesheet">
+	<link href="index.css" rel="stylesheet" type="text/css">
 	<title>Rechercher | Film et Série</title>
 </head>
 <body>
@@ -16,6 +16,20 @@
     		</table>
 	</header>
 	
+	<input id="searchbar" onkeyup="search_movie_serie()" type="text" name="search" placeholder="Rechercher un film/une série...">
+
+	<ol id='list'>
+        <li class="animals">Cat</li>
+        <li class="animals">Dog</li>
+        <li class="animals">Elephant</li>
+        <li class="animals">Fish</li>
+        <li class="animals">Gorilla</li>
+        <li class="animals">Monkey</li>
+        <li class="animals">Turtle</li>
+        <li class="animals">Whale</li>
+        <li class="animals">Aligator</li>
+        <li class
+	</ol>
 	
 </body>
 </html>
