--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -13,23 +13,15 @@
 				    <td style="width: 50%; text-align: left;"><a href="./"><img src="./LOGO.PNG" alt="Logo" height="40"/></a></td>
 						<td style="width: 50%; text-align: right;"><a href="./rechercher/index.html"><img src="./RechercherBtn.png" alt="Rechercher" height="40"/></a></td>
     			</tr>
-    		</table>
+    </table>
 	</header>
 	
 	<input id="searchbar" onkeyup="search_movie_serie()" type="text" name="search" placeholder="Rechercher un film/une série...">
 
-	<ol id='list'>
-        <li class="animals">Cat</li>
-        <li class="animals">Dog</li>
-        <li class="animals">Elephant</li>
-        <li class="animals">Fish</li>
-        <li class="animals">Gorilla</li>
-        <li class="animals">Monkey</li>
-        <li class="animals">Turtle</li>
-        <li class="animals">Whale</li>
-        <li class="animals">Aligator</li>
-        <li class
+	<ol id='ListFilm'>
+		<li class="film">Black Adam</li>
 	</ol>
 	
+	<script src="SearchFilm.js"></script>
 </body>
 </html>
