--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-	<meta charset="utf-8">
-	<link href="index.css" rel="stylesheet">
-	<title>Film et Série</title>
-</head>
-<body>
-	<header>
-		<table style="min-width: 100%;">
-    			<tr>
-				    <td style="width: 50%; text-align: left;"><img src="LOGO.PNG" alt="Logo" height="40"/></td>
-						<td style="width: 50%; text-align: right;"><a href="./rechercher/index.html"><img src="RechercherBtn.png" alt="Rechercher" height="40"/></a></td>
-    			</tr>
-    		</table>
-	</header>
-	
-	
-</body>
+	<head>
+		<meta charset="utf-8">
+		<link href="index.css" rel="stylesheet">
+		<title>Film et Série</title>
+	</head>
+	<body>
+		<header>
+			<table style="min-width: 100%;">
+				<tr>
+					<td style="width: 50%; text-align: left;"><img src="LOGO.PNG" alt="Logo" height="60"/></td>
+					<td style="width: 50%; text-align: right;"><a href="rechercher/"><img src="RechercherBtn.png" alt="Rechercher" height="60"/></a></td>
+				</tr>
+			</table>
+		</header>
+
+		<footer>
+			<p class="reglement">Filmetserie n'héberge en aucun cas les films et séries proposé et se délaisse de toute responsabilité par rapport à ces programmes.</p>
+		</footer>
+	</body>
 </html>
