--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -9,19 +9,31 @@
 <body>
 	<header>
 		<table style="min-width: 100%;">
-    			<tr>
-				    <td style="width: 50%; text-align: left;"><a href="../"><img src="../LOGO.PNG" alt="Logo" height="40"/></a></td>
-						<td style="width: 50%; text-align: right;"><a href="../rechercher/index.html"><img src="../RechercherBtn.png" alt="Rechercher" height="40"/></a></td>
-    			</tr>
-    </table>
+			<tr>
+				<td style="width: 50%; text-align: left;"><a href="../index.html"><img src="../LOGO.PNG" alt="Logo" height="60"/></a></td>
+				<td style="width: 50%; text-align: right;"><a href="index.html"><img src="../RechercherBtn.png" alt="Rechercher" height="60"/></a></td>
+			</tr>
+		</table>
 	</header>
-	
-	<input id="searchbar" onkeyup="search_movie_serie()" type="text" name="search" placeholder="Rechercher un film/une série...">
 
-	<ol id='ListFilm'>
-		<li class="film">Black Adam</li>
-	</ol>
+	<br>
+
+	<input id="searchbar" onkeyup="search_movie_serie()" type="text" name="search" placeholder="Rechercher un film/une série...">
 	
-	<script src="SearchFilm.js"></script>
+	<h1>Films</h1>
+	<ol id='ListFilm'>
+		<ul class="titre"><a href="../film/black-adam-2022/">Black Adam</a></ul>
+	</ol>
+
+	<h1>Séries</h1>
+	<ol id='ListSerie'>
+		<ul class="titre">Teen Wolf</ul>
+	</ol>
+
+	<footer>
+		<p class="reglement">Filmetserie n'héberge en aucun cas les films et séries proposé et se délaisse de toute responsabilité par rapport à ces programmes.</p>
+	</footer>
+	
+	<script src="Search.js"></script>
 </body>
 </html>
