--- a/film/black-adam-2022/index.html
+++ b/film/black-adam-2022/index.html
@@ -10,8 +10,8 @@
 	<header>
 		<table style="min-width: 100%;">
 			<tr>
-				<td style="width: 50%; text-align: left;"><a href="gigastream/index.html"><img src="gigastream/LOGO.PNG" alt="Logo" height="60"/></a></td>
-				<td style="width: 50%; text-align: right;"><a href="gigastream/rechercher/"><img src="gigastream/RechercherBtn.png" alt="Rechercher" height="60"/></a></td>
+				<td style="width: 50%; text-align: left;"><a href="/gigastream/index.html"><img src="/gigastream/LOGO.PNG" alt="Logo" height="60"/></a></td>
+				<td style="width: 50%; text-align: right;"><a href="/gigastream/rechercher/"><img src="/gigastream/RechercherBtn.png" alt="Rechercher" height="60"/></a></td>
 			</tr>
 		</table>
 	</header>
