Changement de nom

--- a/film/black-adam-2022/index.html
+++ b/film/black-adam-2022/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<link href="index.css" rel="stylesheet" type="text/css">
-	<title>Black Adam 2022 | Film et Série</title>
+	<title>Black Adam 2022 | GigaStream</title>
 </head>
 <body>
 	<header>
@@ -24,7 +24,7 @@
 	<p class="iframe"><IFRAME SRC="https://uqload.com/embed-86vhqvlv0r72.html" FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=640 HEIGHT=360 allowfullscreen></IFRAME></p>
 
 	<footer>
-		<p class="reglement">Filmetserie n'héberge en aucun cas les films et séries proposé et se délaisse de toute responsabilité par rapport à ces programmes.</p>
+		<p class="reglement">GigaStream n'héberge en aucun cas les films et séries proposé et se délaisse de toute responsabilité par rapport à ces programmes.</p>
 	</footer>
 </body>
 </html>
