--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="index.css" rel="stylesheet">
-		<title>Film et Série</title>
+		<title>GigaStream</title>
 	</head>
 	<body>
 		<header>
@@ -16,7 +16,7 @@
 		</header>
 
 		<footer>
-			<p class="reglement">Filmetserie n'héberge en aucun cas les films et séries proposé et se délaisse de toute responsabilité par rapport à ces programmes.</p>
+			<p class="reglement">GigaStream n'héberge en aucun cas les films et séries proposé et se délaisse de toute responsabilité par rapport à ces programmes.</p>
 		</footer>
 	</body>
 </html>
