--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<link href="index.css" rel="stylesheet" type="text/css">
-	<title>Rechercher | Film et Série</title>
+	<title>Rechercher | GigaStream</title>
 </head>
 <body>
 	<header>
@@ -31,7 +31,7 @@
 	</ol>
 
 	<footer>
-		<p class="reglement">Filmetserie n'héberge en aucun cas les films et séries proposé et se délaisse de toute responsabilité par rapport à ces programmes.</p>
+		<p class="reglement">GigaStream n'héberge en aucun cas les films et séries proposé et se délaisse de toute responsabilité par rapport à ces programmes.</p>
 	</footer>
 	
 	<script src="Search.js"></script>
