--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<header>
 			<table style="min-width: 100%;">
 				<tr>
-					<td style="width: 50%; text-align: left;"><img src="LOGO.PNG" alt="Logo" height="60"/></td>
+					<td style="width: 50%; text-align: left;"><img src="LOGOv2.PNG" alt="Logo" height="60"/></td>
 					<td style="width: 50%; text-align: right;"><a href="rechercher/"><img src="RechercherBtn.png" alt="Rechercher" height="60"/></a></td>
 				</tr>
 			</table>
