Ajout de Teen-Wolf-2011

--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -4,13 +4,14 @@
 <head>
 	<meta charset="utf-8">
 	<link href="index.css" rel="stylesheet" type="text/css">
+	<link href="../ICON.PNG" rel="icon">
 	<title>Rechercher | GigaStream</title>
 </head>
 <body>
 	<header>
 		<table style="min-width: 100%;">
 			<tr>
-				<td style="width: 50%; text-align: left;"><a href="../index.html"><img src="../LOGO.PNG" alt="Logo" height="60"/></a></td>
+				<td style="width: 50%; text-align: left;"><a href="../index.html"><img src="../LOGO.PNG" alt="Logo" height="70"/></a></td>
 				<td style="width: 50%; text-align: right;"><a href="index.html"><img src="../RechercherBtn.png" alt="Rechercher" height="60"/></a></td>
 			</tr>
 		</table>
@@ -27,7 +28,7 @@
 
 	<h1>Séries</h1>
 	<ol id='ListSerie'>
-		<ul class="titre">Teen Wolf</ul>
+		<ul class="titre"><a href="../serie/teen-wolf-2011/">Teen Wolf</a></ul>
 	</ol>
 
 	<footer>
