--- a/serie/teen-wolf-2011/saison-1/episode-2/index.html
+++ b/serie/teen-wolf-2011/saison-1/episode-2/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<link href="index.css" rel="stylesheet" type="text/css">
 	<link href="gigastream/ICON.PNG" rel="icon">
-	<title>Black Adam 2022 | GigaStream</title>
+	<title>Teen-Wolf S1E1 | GigaStream</title>
 </head>
 <body>
 	<header>
@@ -19,10 +19,10 @@
 
 	<br>
 	
-	<h1>Black Adam 2022 HDRIP VF</h1>
+	<h1>Teen-Wolf Saison 1 Épisode 1 HD VF</h1>
 	<h3>Nous vous conseillons d'utiliser un bloqueur de publicité.</h3>
 	<br>
-	<p class="iframe"><IFRAME SRC="https://uqload.com/embed-86vhqvlv0r72.html" FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=640 HEIGHT=360 allowfullscreen></IFRAME></p>
+	<p class="iframe"><IFRAME SRC="https://uqload.com/embed-zowbhwveg01s.html" FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=640 HEIGHT=360 allowfullscreen></IFRAME></p>
 
 	<footer>
 		<p class="reglement">GigaStream n'héberge en aucun cas les films et séries proposé et se délaisse de toute responsabilité par rapport à ces programmes.</p>
