Ajout responsive + lien vers autre épisode

--- a/serie/teen-wolf-2011/index.html
+++ b/serie/teen-wolf-2011/index.html
@@ -22,9 +22,18 @@
 	<h1>Teen Wolf HD VF</h1>
 	<h3>Nous vous conseillons d'utiliser un bloqueur de publicité.</h3>
 	<br>
-    <h2>Saison 1</h2>
-    <a href="saison-1/episode-1/"><img src="Teen-Wolf.png" height="217.5"></a>
-    <a href="saison-1/episode-2/"><img src="Teen-Wolf.png" height="217.5"></a>
+
+	<h2>Saison 1 9</h2>
+	<table style="min-width: 100%;">
+		<tr>
+			<td style="width: 25%; text-align: center;"><a href="saison-1/episode-1/"><img src="Teen-Wolf.png" height="217.5"></a></td>
+			<td style="width: 25%; text-align: center;"><a href="saison-1/episode-2/"><img src="Teen-Wolf.png" height="217.5"></a></td>
+			<td style="width: 25%; text-align: center;"></td>
+			<td style="width: 25%; text-align: center;"></td>
+		</tr>
+	</table>
+
+	<br>
 
 	<footer>
 		<p class="reglement">GigaStream n'héberge en aucun cas les films et séries proposé et se délaisse de toute responsabilité par rapport à ces programmes.</p>
