--- a/serie/teen-wolf-2011/saison-1/episode-1/index.html
+++ b/serie/teen-wolf-2011/saison-1/episode-1/index.html
@@ -24,6 +24,8 @@
 	<br>
 	<p class="iframe"><IFRAME SRC="https://uqload.com/embed-j05swjbh6igj.html" FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=640 HEIGHT=360 allowfullscreen></IFRAME></p>
 
+	<h3><a href="/gigastream/serie/teen-wolf-2011/" class="autre">Voir les autres épisodes de <strong>Teen-Wolf</strong></a></h3>
+
 	<footer>
 		<p class="reglement">GigaStream n'héberge en aucun cas les films et séries proposé et se délaisse de toute responsabilité par rapport à ces programmes.</p>
 	</footer>
