--- a/serie/teen-wolf-2011/index.html
+++ b/serie/teen-wolf-2011/index.html
@@ -21,17 +21,25 @@
 	
 	<h1>Teen Wolf HD VF</h1>
 	<h3>Nous vous conseillons d'utiliser un bloqueur de publicité.</h3>
+	
 	<br>
 
-	<h2>Saison 1 9</h2>
-	<table style="min-width: 100%;">
-		<tr>
-			<td style="width: 25%; text-align: center;"><a href="saison-1/episode-1/"><img src="Teen-Wolf.png" height="217.5"></a></td>
-			<td style="width: 25%; text-align: center;"><a href="saison-1/episode-2/"><img src="Teen-Wolf.png" height="217.5"></a></td>
-			<td style="width: 25%; text-align: center;"></td>
-			<td style="width: 25%; text-align: center;"></td>
-		</tr>
-	</table>
+	<HR ALIGN=CENTER WIDTH="90%" SIZE="4" NOSHADE COLOR="WHITE">
+	<h2 style="color: red;">Saison 1</h2>
+	<p>
+		<a href="saison-1/episode-1/"><img src="Teen-Wolf.png" height="200"></a>
+		<a href="saison-1/episode-2/"><img src="Teen-Wolf.png" height="200"></a>
+		<a href="saison-1/episode-3/"><img src="Teen-Wolf.png" height="200"></a>
+		<a href="saison-1/episode-4/"><img src="Teen-Wolf.png" height="200"></a>
+		<a href="saison-1/episode-5/"><img src="Teen-Wolf.png" height="200"></a>
+		<a href="saison-1/episode-6/"><img src="Teen-Wolf.png" height="200"></a>
+		<a href="saison-1/episode-7/"><img src="Teen-Wolf.png" height="200"></a>
+		<a href="saison-1/episode-8/"><img src="Teen-Wolf.png" height="200"></a>
+		<a href="saison-1/episode-9/"><img src="Teen-Wolf.png" height="200"></a>
+		<a href="saison-1/episode-10/"><img src="Teen-Wolf.png" height="200"></a>
+		<a href="saison-1/episode-11/"><img src="Teen-Wolf.png" height="200"></a>
+		<a href="saison-1/episode-12/"><img src="Teen-Wolf.png" height="200"></a>
+	</p>
 
 	<br>
 
