--- a/serie/teen-wolf-2011/saison-1/episode-7/index.html
+++ b/serie/teen-wolf-2011/saison-1/episode-7/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<link href="index.css" rel="stylesheet" type="text/css">
 	<link href="gigastream/ICON.PNG" rel="icon">
-	<title>Teen-Wolf S1E2 | GigaStream</title>
+	<title>Teen-Wolf S1E7 | GigaStream</title>
 </head>
 <body>
 	<header>
@@ -19,10 +19,10 @@
 
 	<br>
 	
-	<h1>Teen-Wolf Saison 1 Épisode 2 HD VF</h1>
+	<h1>Teen-Wolf Saison 1 Épisode 7 HD VF</h1>
 	<h3>Nous vous conseillons d'utiliser un bloqueur de publicité.</h3>
 	<br>
-	<p class="iframe"><IFRAME SRC="https://uqload.com/embed-zowbhwveg01s.html" FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=640 HEIGHT=360 allowfullscreen></IFRAME></p>
+	<p class="iframe"><IFRAME SRC="https://uqload.com/embed-i3la0wrncacj.html" FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=640 HEIGHT=360 allowfullscreen></IFRAME></p>
 
 	<h3><a href="/gigastream/serie/teen-wolf-2011/" class="autre">Voir les autres épisodes de <strong>Teen-Wolf</strong></a></h3>
 
