--- a/serie/teen-wolf-2011/index.html
+++ b/serie/teen-wolf-2011/index.html
@@ -41,6 +41,23 @@
 		<a href="saison-1/episode-12/"><img src="Teen-Wolf.png" height="200"></a>
 	</p>
 
+	<HR ALIGN=CENTER WIDTH="90%" SIZE="4" NOSHADE COLOR="WHITE">
+		<h2 style="color: red;">Saison 2</h2>
+		<p>
+			<a href="saison-2/episode-1/"><img src="Teen-Wolf.png" height="200"></a>
+			<a href="saison-2/episode-2/"><img src="Teen-Wolf.png" height="200"></a>
+			<a href="saison-2/episode-3/"><img src="Teen-Wolf.png" height="200"></a>
+			<a href="saison-2/episode-4/"><img src="Teen-Wolf.png" height="200"></a>
+			<a href="saison-2/episode-5/"><img src="Teen-Wolf.png" height="200"></a>
+			<a href="saison-2/episode-6/"><img src="Teen-Wolf.png" height="200"></a>
+			<a href="saison-2/episode-7/"><img src="Teen-Wolf.png" height="200"></a>
+			<a href="saison-2/episode-8/"><img src="Teen-Wolf.png" height="200"></a>
+			<a href="saison-2/episode-9/"><img src="Teen-Wolf.png" height="200"></a>
+			<a href="saison-2/episode-10/"><img src="Teen-Wolf.png" height="200"></a>
+			<a href="saison-2/episode-11/"><img src="Teen-Wolf.png" height="200"></a>
+			<a href="saison-2/episode-12/"><img src="Teen-Wolf.png" height="200"></a>
+		</p>
+
 	<br>
 
 	<footer>
