Ajout film + page d'acceuil + procédure + template

--- a/index.html
+++ b/index.html
@@ -16,7 +16,41 @@
 			</table>
 		</header>
 
+		<h2>Derniers films ajoutés</h2>
+		<table style="min-width: 100%;">
+			<tr>
+				<td style="width: 10%; text-align: center;"><a href="film/bullet-train-2022/"><img class="affiche" src="film/bullet-train-2022/couverture.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
+			</tr>
+		</table>
+
+		<h2>Dernières séries ajoutées</h2>
+		<table style="min-width: 100%;">
+			<tr>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
+			</tr>
+		</table>
+
+
 		<footer>
+			<h3>Tu n'as plus d'idée de film ou de série à regarder ?<br>Demande un <a href="filmrandom/" class="aleatoire"><img src="aléatoire.gif" width="10">film aléatoire<img src="aléatoire.gif" width="10"></a> ou une <a href="serierandom/" class="aleatoire"><img src="aléatoire.gif" width="10">série aléatoire<img src="aléatoire.gif" width="10"></a>.</h3>
 			<p class="reglement">GigaStream n'héberge en aucun cas les films et séries proposé et se délaisse de toute responsabilité par rapport à ces programmes.</p>
 		</footer>
 	</body>
