Coorection nom Bullet Train

--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -24,7 +24,7 @@
 	<h1>Films</h1>
 	<ol id='ListFilm'>
 		<ul class="titre"><a href="../film/black-adam-2022/">Black Adam</a></ul>
-		<ul class="titre"><a href="../film/bullet-train-2022/">Black Adam</a></ul>
+		<ul class="titre"><a href="../film/bullet-train-2022/">Bullet Train</a></ul>
 	</ol>
 
 	<h1>Séries</h1>
