--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 		<header>
 			<table style="min-width: 100%;">
 				<tr>
-					<td style="width: 50%; text-align: left;"><img src="LOGO.PNG" alt="Logo" height="70"/></td>
-					<td style="width: 50%; text-align: right;"><a href="rechercher/"><img src="RechercherBtn.png" alt="Rechercher" height="60"/></a></td>
+					<td style="width: 33%; text-align: left;"><img src="LOGO.PNG" alt="Logo" height="70"/></td>
+					<td style="width: 33%; text-align: center;"><a href="https://paypal.me/lagrossediscord?country.x=FR&locale.x=fr_FR"><img src="PayPal.png" alt="Faire un don" height="60"/></a></td>
+					<td style="width: 33%; text-align: right;"><a href="rechercher/"><img src="RechercherBtn.png" alt="Rechercher" height="60"/></a></td>
 				</tr>
 			</table>
 		</header>
@@ -19,32 +20,32 @@
 		<h2>Derniers films ajoutés</h2>
 		<table style="min-width: 100%;">
 			<tr>
-				<td style="width: 10%; text-align: center;"><a href="film/bullet-train-2022/"><img class="affiche" src="film/bullet-train-2022/couverture.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/bullet-train-2022/"><img class="affiche" src="film/bullet-train-2022/couverture.jpg" width="100" height="140"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" width="100" height="140"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" width="100" height="140"></a></td>
 			</tr>
 		</table>
 
 		<h2>Dernières séries ajoutées</h2>
 		<table style="min-width: 100%;">
 			<tr>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" height="150"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
 			</tr>
 		</table>
 
