--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<table style="min-width: 100%;">
 				<tr>
 					<td style="width: 33%; text-align: left;"><img src="LOGO.PNG" alt="Logo" height="70"/></td>
-					<td style="width: 33%; text-align: center;"><a href="https://paypal.me/lagrossediscord?country.x=FR&locale.x=fr_FR"><img src="PayPal.png" alt="Faire un don" height="60"/></a></td>
+					<td style="width: 33%; text-align: center;"><a href="https://paypal.me/lagrossediscord?country.x=FR&locale.x=fr_FR" target="_blank"><img src="PayPal.png" alt="Faire un don" height="60"/></a></td>
 					<td style="width: 33%; text-align: right;"><a href="rechercher/"><img src="RechercherBtn.png" alt="Rechercher" height="60"/></a></td>
 				</tr>
 			</table>
@@ -36,22 +36,23 @@
 		<h2>Dernières séries ajoutées</h2>
 		<table style="min-width: 100%;">
 			<tr>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/	"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
 			</tr>
 		</table>
 
 
 		<footer>
 			<h3>Tu n'as plus d'idée de film ou de série à regarder ?<br>Demande un <a href="filmrandom/" class="aleatoire"><img src="aléatoire.gif" width="10">film aléatoire<img src="aléatoire.gif" width="10"></a> ou une <a href="serierandom/" class="aleatoire"><img src="aléatoire.gif" width="10">série aléatoire<img src="aléatoire.gif" width="10"></a>.</h3>
+			<p class="introuvable">Si vous ne trouvez pas un film ou une série, vous pouvez toujours demander à ce qu'on le/la rajoute → <a href="https://forms.gle/4XLhQStLS6fNnLUQ8" target="_blank" class="introuvable">Demander</a></p>
 			<p class="reglement">GigaStream n'héberge en aucun cas les films et séries proposé et se délaisse de toute responsabilité par rapport à ces programmes.</p>
 		</footer>
 	</body>
