--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -33,6 +33,7 @@
 	</ol>
 
 	<footer>
+		<p class="introuvable">Si vous ne trouvez pas un film ou une série, vous pouvez toujours demander à ce qu'on le/la rajoute → <a href="https://forms.gle/4XLhQStLS6fNnLUQ8" target="_blank" class="introuvable">Demander</a></p>
 		<p class="reglement">GigaStream n'héberge en aucun cas les films et séries proposé et se délaisse de toute responsabilité par rapport à ces programmes.</p>
 	</footer>
 	
