--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="index.css" rel="stylesheet">
-		<link href="ICON.png" rel="icon">
+		<link href="ICON.PNG" rel="icon">
 		<title>GigaStream</title>
 	</head>
 	<body>
