--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -30,6 +30,7 @@
 	<h1>Séries</h1>
 	<ol id='ListSerie'>
 		<ul class="titre"><a href="../serie/teen-wolf-2011/">Teen Wolf</a></ul>
+		<ul class="titre"><a href="../serie/mercredi-2022/">Mercredi</a></ul>
 	</ol>
 
 	<footer>
