--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<h2>Dernières séries ajoutées</h2>
 		<table style="min-width: 100%;">
 			<tr>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/mercredi-2022/"><img class="affiche" src="serie/mercredi-2022/couverure.jpg" width="100" height="140"></a></td>
 				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
 				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
 				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverure.jpg" width="100" height="140"></a></td>
