--- a/serierandom/index.html
+++ b/serierandom/index.html
@@ -12,7 +12,7 @@
             if (a==1)
             variable("/gigastream/serie/teen-wolf-2011/");
             if (a==2)
-            variable("pas config");
+            variable("/gigastream/serie/mercredi-2022/");
             }
             </script>
         <meta charset="utf-8">
