Black Panther: Wakanda Forever + Le menteur + Uncharted

--- a/filmrandom/index.html
+++ b/filmrandom/index.html
@@ -12,7 +12,13 @@
             if (a==1)
             variable("/gigastream/film/black-adam-2022/index.html");
             if (a==2)
-            variable("/gigastream/film/bullet-train-2022/index.html")
+            variable("/gigastream/film/bullet-train-2022/index.html");
+            if (a==3)
+            variable("/gigastream/film/black-panther-wakanda-forever-2022/index.html");
+            if (a==4)
+            variable("/gigastream/film/le-menteur-2022/index.html");
+            if (a==5)
+            variable("/gigastream/film/uncharted-2022/index.html");
             }
             </script>
         <meta charset="utf-8">
