--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -24,7 +24,10 @@
 	<h1>Films</h1>
 	<ol id='ListFilm'>
 		<ul class="titre"><a href="../film/black-adam-2022/">Black Adam</a></ul>
+		<ul class="titre"><a href="../film/black-panther-wakanda-forever-2022/">Black Panther: Wakanda Forever</a></ul>
 		<ul class="titre"><a href="../film/bullet-train-2022/">Bullet Train</a></ul>
+		<ul class="titre"><a href="../film/le-menteur-2022/">Le Menteur</a></ul>
+		<ul class="titre"><a href="../film/uncharted-2022/">Uncharted</a></ul>
 	</ol>
 
 	<h1>Séries</h1>
